# inf_sem1

./: README.MD  db.sqlite3  manage.py  pyproject.toml
handmade_catalog_web/: apps.py  views.py
handmade_catalog_web/static/handmade_catalog_web/css/: main.css
handmade_catalog_web/templates/handmade_catalog_web/: about.html  index.html  layout.html
inf_sem1/: asgi.py  settings.py  urls.py  wsgi.py
news/: forms.py  urls.py  views.py
news/migrations/: 0001_initial.py
news/templates/news/: create.html  news_home.html
