[tool.poetry]
name = "inf_sem1"
version = "0.1.0"
description = ""
authors = ["dddaarya <agafonova592@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Django = "^3.2.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
